Finished the rest of everything else;

--- a/client/templates/about-us.html
+++ b/client/templates/about-us.html
@@ -18,6 +18,13 @@
                     <p>
                       To IT professionals we offer a variety of IT job opportunities and counsels to help them achieve their personal career goals. What motivates us above all is to find the perfect fit between our clients' needs and our candidates' aspirations.
                     </p>
+                    <div class="indent">
+                      <strong>Read our terms and conditions</strong>
+                      <div class="indent">
+                        Job Seekers &ndash; <a href="{{pathFor route='TNC_JS'}}">Here</a><br />
+                        Employers &ndash; <a href="{{pathFor route='TNC_Emp'}}">Here</a><br />
+                      </div>
+                    </div>
                   </div>
                 </ul><br />
               </div>
