--- a/client/templates/admin/admin-index.html
+++ b/client/templates/admin/admin-index.html
@@ -14,7 +14,7 @@
 			<ul>
 				<li><a href="{{pathFor route='Admin_Home'}}">Dashboard</a></li>
 				<li><a href="{{pathFor route='Admin_Users'}}">Users</a></li>
-				<li><a href="{{pathFor route='Admin_Reports'}}">Reports</a></li>
+				<!--<li><a href="{{pathFor route='Admin_Reports'}}">Reports</a></li>-->
 			</ul>
 			<hr class="navbar-hr" />
 			<ul>
