--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -43,10 +43,10 @@
       <div style="position:relative;">
         <div class="social" align="right">
           <ul>
-            <li><a href="#"><img src="/style/images/icon-linkedin.png" alt=""></a></li>
-            <li><a href="#"><img src="/style/images/icon-twitter.png" alt=""></a></li>
-            <li><a href="#"><img src="/style/images/icon-facebook.png" alt=""></a></li>
-            <li><a href="#"><img src="/style/images/icon-google.png" alt=""></a></li>
+            <li><a href="http://www.linkedin.com/company/9343979" target="_blank"><img src="/style/images/icon-linkedin.png" alt=""></a></li>
+            <li><a href="https://twitter.com/toadit_recruit" target="_blank"><img src="/style/images/icon-twitter.png" alt=""></a></li>
+            <li><a href="https://www.facebook.com/ToadIT-Recruitment-Services-1625699004320467/timeline/" target="_blank"><img src="/style/images/icon-facebook.png" alt=""></a></li>
+            <!--<li><a href="#"><img src="/style/images/icon-google.png" alt=""></a></li>-->
           </ul>
         </div>
         <nav id="access" class="access" role="navigation" style="position:relative;">
