--- a/client/templates/job-seeker/profile-js.html
+++ b/client/templates/job-seeker/profile-js.html
@@ -44,7 +44,7 @@
 								You are viewing this profile with a token.
 							</div>
 						{{/if}}
-						<h1>{{profile.personal_details.name}} {{> Profile_retracted value=profile.personal_details.surname}}</h1>
+						<h1>{{profile.personal_details.name}} {{profile.personal_details.surname}}</h1>
 						<h3><i class="glyphicon glyphicon-map-marker"></i> {{profile.personal_details.suburb}}, {{profile.personal_details.province}}</h3>
 						<!-- IT Skills -->
 						<div>
