--- a/client/stylesheets/css/custom.import.less
+++ b/client/stylesheets/css/custom.import.less
@@ -92,6 +92,12 @@ form.contact-form {
 	// special
 	button.special { color:@main-colour-1; background-color:rgba(252, 214, 176, 1); } 
 	button.special:hover { background-color:@main-colour-1; color:white; }
+	// success (green)
+	button.success { color:green; background-color:rgba(202, 252, 176, 1); }
+	button.success:hover { color:white; background-color:green; }
+	// danger (red)
+	button.danger { color:red; background-color:rgba(252, 195, 176, 1); }
+	button.danger:hover { color:white; background-color:red; }
 
 // MISC.
 .to-be-removed {
@@ -729,15 +735,22 @@ button.disabled { cursor:default;color:gray; background-color:lightgrey; }
 }
 
 // SEARCH
-.search-wrapper {
-	width:100%;
-	position:relative;
+.search-wrapper,
+.selection-wrapper {
 	.header-1 {
 		width:100%;
 		padding:5px 8px;
 		border-bottom:1px solid @main-colour-1;
 		text-transform:capitalize;
+		.header-link {
+			a { font-size: 13px; text-decoration:underline; }
+		}
 	}
+}
+
+.search-wrapper {
+	width:100%;
+	position:relative;
 	.searchfields-wrapper, .search-results-wrapper {
 		display:inline-block;
 		vertical-align:top;
@@ -771,6 +784,10 @@ button.disabled { cursor:default;color:gray; background-color:lightgrey; }
 				.input-combobox-wrapper { width:100%; } input { width:96%; }
 			}
 		}
+
+		.skill-search {
+			.skill-item-wrapper { display:block; }
+		}
 		span.error {
 			background-color:@error-colour-faded;
 			box-shadow:4px 4px 4px rgba(0,0,0,0.3);
@@ -790,13 +807,13 @@ button.disabled { cursor:default;color:gray; background-color:lightgrey; }
 				width:100%;
 				font-size:14.5px;
 				table-layout:fixed;
-				td, th { padding:3px; }
+				td, th { padding:3px; vertical-align:middle; }
 				th { padding-top:8px; padding-bottom:8px; }
 				td {
 					white-space: nowrap;
 					overflow: hidden;
 					text-overflow: ellipsis;
-					vertical-align:middle;
+					
 				}
 				tr.job-seeker {
 					td:nth-child(1),
@@ -815,15 +832,19 @@ button.disabled { cursor:default;color:gray; background-color:lightgrey; }
 					td:nth-child(3),
 					th:nth-child(3) { width:10%; }
 					td:nth-child(4),
-					th:nth-child(4) { width:10%; }
+					th:nth-child(4) { width:15%; }
 					td:nth-child(5),
 					th:nth-child(5) { width:10%; }
 					td:nth-child(6),
-					th:nth-child(6) { width:15%; }
+					th:nth-child(6) { width:10%; }
 					td:nth-child(7),
-					th:nth-child(7) { width:18%; }
-					td:nth-child(8),
-					th:nth-child(8) { width:18%; }
+					th:nth-child(7) { width:30%; }
+					.selection-control-wrapper {
+						display:table-cell;
+						vertical-align:middle;
+						//padding-left:10px;
+						//button { box-shadow: 0 2px 2px rgba(0,0,0,0.2); }
+					}
 				}
 				tr.employer {
 					td:nth-child(1),
@@ -978,8 +999,8 @@ button.disabled { cursor:default;color:gray; background-color:lightgrey; }
 }
 .homepage-vacancy-wrapper {
 	padding:0 8px; border-left:1px solid lightgray;height:100%;
-	.head-title { color:gray; font-size:17px; border-bottom:1px solid lightgray; margin-bottom:5px; padding-bottom:5px; padding-left:10px;}
-	.view-more { width:100%; border-top:1px solid lightgray; padding-top:8px;margin-top:10px; text-align:right; font-size:12px; display:block; }
+	.head-title { color:white; text-align:center; font-size:17px; margin-bottom:5px; padding-left:10px; background:@main-colour-1; padding:5px 0; }
+	.view-more { width:100%; padding-top:8px;margin-top:10px; text-align:right; font-size:12px; display:block; }
 }
 .homepage-vacancy-item-wrapper {
 	background-color:rgba(240, 240, 240, 1);
@@ -1033,3 +1054,62 @@ button.disabled { cursor:default;color:gray; background-color:lightgrey; }
 	.skill-remove { background:rgba(0,0,0,0.6); }
 	.skill-yrs { border:1px solid rgba(0,0,0,0.6); }
 }
+
+// SELECTIONS
+.selection-wrapper {
+	.selection-link-wrapper {
+		width:100%; padding:15px;
+		background-color:rgba(228, 228, 228, 1);border:1px solid lightgray;
+		margin:10px 0;
+		input { width:100%; } span { color:gray; }
+	}
+	.selection-item-wrapper {
+		.selection-item {
+			display:table; width:100%; height: 160px;
+			border-bottom:1px solid lightgray;margin-bottom:5px; box-shadow:1px 2px 6px rgba(0,0,0,0.2); 
+			background-color:white;
+			.selection-pp { width:20%; background-size:cover; background-position:center; background-color:white; margin:-20px; top:0; bottom:0; height:100%; }
+			.selection-details {
+				width: 30%; padding-left:15px;
+				.name { font-weight:bold; }
+				.secondary-details { color:gray; font-style:italic; }
+			}
+			.selection-skills {
+				width: 30%;
+				.selection-header { font-weight:bold; }
+			}
+			.selection-profile {
+				width: 20%; text-align:center;
+				a {
+					height: 80%;
+					display: inline-block;
+					width: 100%;
+					padding-top: 50px;
+					border-left: 1px solid #D3D3D3;
+				}
+			}
+			div { display:table-cell; vertical-align:middle; }
+		}
+	}
+}
+
+// TERMS AND CONDITIONS
+.tnc-wrapper {
+	.header {
+		padding:20px; text-align:left; border-left:8px solid @main-colour-1;
+		background:@main-colour-1-faded;
+		h1, h3 { color:@main-colour-1; }
+		h3 { font-style:italic; padding-left:10px; }
+	}
+	.content {
+		padding-top:10px; margin-top:10px; border-top:1px solid @main-colour-1-faded; 
+		ol { counter-reset: item }
+		li { display: block; margin-left:15px; }
+		li:before { content: counters(item, ".") ". "; counter-increment: item; }
+	}
+}
+	//registration page
+	.tnc-agreement-wrapper {
+		padding-left:20px; 
+		input { vertical-align:sub; }
+	}
