--- a/client/stylesheets/css/style.import.less
+++ b/client/stylesheets/css/style.import.less
@@ -1135,7 +1135,7 @@ footer.entry-meta .tags a:before{
 ----------------------------------------------- */
 
 .gallery-items {
-	margin: 0 30px 0;
+	//margin: 0 30px 0;
 }
 
 .gallery-items li.item {
@@ -1252,7 +1252,7 @@ img.img2 {
 }
 
 .job-s:hover:before, .job-s:hover:after {
-	margin-right: 270px;
+	//margin-right: 270px;
 	content: url('style/images/art/job-seekers-hover.png');
 	position: absolute;
 }
@@ -1263,7 +1263,7 @@ img.img2 {
 	max-height: 5px;
 	max-width: 20px;
 	top: -10px;
-	left: 246px;
+	right: -25px;
 }
 
 .gallery-items li.item {
